test/conformance/chainsaw/generate/validation/policy/variable-target-scope/policy-fail-api-version.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: generate-variable-api-version
  namespace: default
spec:
  rules:
  - name: generate-resource
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
    generate:
      apiVersion: "{{request.object.metadata.labels.targetVersion}}"
      kind: ConfigMap
      name: generated-resource
      namespace: default
