test/conformance/chainsaw/generate/validation/policy/variable-target-scope/policy-fail-clonelist-kind.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: generate-variable-clonelist-kind
  namespace: default
spec:
  rules:
  - name: clone-resources
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
    generate:
      namespace: default
      cloneList:
        kinds:
        - "{{request.object.metadata.labels.sourceKind}}"
        namespace: default
