test/conformance/chainsaw/generate/validation/policy/variable-target-scope/policy-fail-clonelist-namespace.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: generate-variable-clonelist-namespace
  namespace: default
spec:
  rules:
  - name: clone-resources
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
    generate:
      namespace: default
      cloneList:
        kinds:
        - v1/ConfigMap
        namespace: "{{request.object.metadata.labels.sourceNamespace}}"
