test/conformance/chainsaw/generate/validation/policy/variable-target-scope/policy-fail-foreach-kind.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: generate-foreach-variable-kind
  namespace: default
spec:
  rules:
  - name: generate-resources
    match:
      any:
      - resources:
          kinds:
          - Pod
    generate:
      foreach:
      - list: request.object.spec.containers
        apiVersion: v1
        kind: "{{request.object.metadata.labels.targetKind}}"
        name: "{{element.name}}-generated"
        namespace: default
