test/conformance/chainsaw/generate/validation/policy/variable-target-scope/policy-fail-reference-clone-namespace.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: generate-reference-clone-namespace
  namespace: default
spec:
  rules:
  - name: clone-resource
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
    generate:
      apiVersion: v1
      kind: ConfigMap
      name: '{{request.object.metadata.labels.target}}'
      namespace: default
      clone:
        name: source-resource
        namespace: $(/name)
