test/conformance/chainsaw/generate/validation/policy/variable-target-scope/policy-fail-reference-foreach-kind.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: generate-foreach-reference-kind
  namespace: default
spec:
  rules:
  - name: generate-resources
    match:
      any:
      - resources:
          kinds:
          - Pod
    generate:
      foreach:
      - list: request.object.spec.containers
        apiVersion: v1
        kind: $(./../name)
        name: '{{request.object.metadata.labels.target}}'
        namespace: default
