test/conformance/chainsaw/generate/validation/policy/variable-target-scope/policy-fail-reference-kind.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: generate-reference-kind
  namespace: default
spec:
  rules:
  - name: generate-resource
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
    generate:
      apiVersion: v1
      kind: $(./../name)
      name: '{{request.object.metadata.labels.target}}'
      namespace: default
