test/conformance/chainsaw/generate/validation/policy/variable-target-scope/policy-fail-reference-target-namespace.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: generate-reference-target-namespace
  namespace: default
spec:
  rules:
  - name: generate-resource
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
    generate:
      apiVersion: v1
      kind: ConfigMap
      name: '{{request.object.metadata.labels.target}}'
      namespace: $(/name)
