test/conformance/chainsaw/generate/validation/policy/variable-target-scope/policy-fail-target-namespace.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: generate-variable-target-namespace
  namespace: default
spec:
  rules:
  - name: generate-resource
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
    generate:
      apiVersion: v1
      kind: ConfigMap
      name: generated-resource
      namespace: "{{request.object.metadata.labels.targetNamespace}}"
