test/conformance/chainsaw/generate/validation/policy/variable-target-scope/policy-pass-reference-name.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: generate-reference-name
  namespace: default
spec:
  rules:
  - name: generate-configmap
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
    generate:
      apiVersion: v1
      kind: ConfigMap
      name: $(./../data/data/target)-generated
      namespace: default
      data:
        data:
          target: '{{request.object.metadata.name}}'
